# localsend-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: rust.yml
localsend-cli/: Cargo.toml
localsend-cli/src/: args.rs  config.rs  constants.rs  discover.rs  download.rs  example.rs  main.rs  state.rs  utils.rs
localsend-lib-api/: Cargo.toml
localsend-lib-api/src/: api.rs  lib.rs
localsend-lib-messages/: Cargo.toml  Readme.md
localsend-lib-messages/src/: lib.rs  messages.rs
localsend-lib-messages/src/messages/: download.rs
localsend-lib-messages/src/messages/common_fields/: common_file_fields.rs
localsend-lib-types/: Cargo.toml
localsend-lib-types/src/: api.rs  errors.rs  lib.rs  messages.rs
localsend-lib-types/src/messages/: common_fields.rs  discover.rs  download.rs  upload.rs
localsend-lib-types/src/messages/common_fields/: common_device_fields.rs  common_file_fields.rs
src/: errors.rs  lib.rs  messages.rs
src/messages/: common_fields.rs  discover.rs  download.rs  upload.rs
src/messages/common_fields/: common_device_fields.rs  common_file_fields.rs
