[package]
name = "localsend-lib"
version = "0.1.0"
edition = "2021"
description = "Rust library for localsend protocol https://github.com/localsend/protocol"
repository = "https://github.com/nain-F49FF806/localsend-lib.rs"
license = "MIT OR Apache-2.0"

[dependencies]
data-url = "0.3.1"
derive_more = { version = "1", features = ["from", "constructor"] }
mediatype = "0.19.18"
serde = { version = "1.0", features = ["derive"] }
serde-bool = "0.1.3"
serde_json = "1.0"
serde_with = { version = "3.11.0", features = ["time_0_3"] }
thiserror = "1.0.64"
time = "0.3.36"
typed-builder = "0.20.0"
url = "2.5.2"
