[workspace]

members = [ "localsend-cli","localsend-lib-types"]
resolver = "2"

[workspace.package]
version = "0.1.1+localsendv2.1"
edition = "2021"
description = "Rust library for localsend protocol https://github.com/localsend/protocol"
repository = "https://github.com/nain-F49FF806/localsend.rs"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
derive_more = "1"
serde = "1.0"
serde-bool = "0.1.3"
serde_json = "1.0"
serde_with = "3.11.0"
thiserror = "1.0.64"
