[package]
name = "localsend-cli"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
argh = "0.1.12"
compounderr = { git = "https://github.com/nain-F49FF806/compounderr.git", version = "0.2.0" }
convert_case = "0.6.0"
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
derive_more = { workspace = true, features = ["display"] }
directories = "5.0.1"
# flexi_logger = "0.29.4"
localsend-lib-types = { version = "0.1.1", path = "../localsend-lib-types" }
# log = "0.4.22"
multicast-socket = "0.3.3"
names = { version = "0.14.0", default-features = false }
reqwest = { version = "0.12.8", features = ["blocking"] }
serde.workspace = true
serde-bool = "0.1.3"
# pretty_env_logger = "0.5.0"
serde_json.workspace = true
terminal-link = "0.1.0"
thiserror.workspace = true
tokio = { version = "1.41.1", features = ["macros", "rt"] }
toml = "0.8.19"
url = "2.5.3"
uuid = { version = "1.11.0", features = ["v4"] }
# tokio = { version = "1", features = ["full"] }
