[package]
name = "localsend-lib-messages"
version = "0.1.1+localsendv2.1"
edition = "2021"
description = "Rust library for localsend protocol https://github.com/localsend/protocol"
repository = "https://github.com/nain-F49FF806/localsend-lib.rs"
license = "MIT OR Apache-2.0"

[dependencies]
derive_more = { version = "1", features = ["from", "constructor"] }
mediatype = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde-bool = "0.1.3"
serde_json = "1.0"
serde_with = { version = "3.11.0" }
thiserror = "1.0.64"
typed-builder = "0.20.0"
