[package]
name = "localsend-lib-messages"
version = "0.1.1+localsendv2.1"
edition = "2021"
description = "Rust library for localsend protocol https://github.com/localsend/protocol"
repository = "https://github.com/nain-F49FF806/localsend-lib.rs"
license = "MIT OR Apache-2.0"

[dependencies]
derive_more = { workspace = true, features = ["from", "constructor"] }
mediatype = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-bool = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
typed-builder = { workspace = true }
