[package]
name = "localsend-lib-messages"

version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
derive_more = { workspace = true, features = ["from", "constructor"] }
mediatype = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-bool = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
typed-builder = { workspace = true }
